<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.duodian.admore.login.LoginActivity">


    <LinearLayout
        android:id="@+id/linear_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="43dp"
            android:layout_marginTop="100dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/admore" />

        <EditText
            android:id="@+id/edit_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/borderPaddingBig"
            android:layout_marginRight="@dimen/borderPaddingBig"
            android:layout_marginTop="100dp"
            android:background="@drawable/shape_round_corner_gray"
            android:hint="@string/inputUsername"
            android:imeOptions="actionNext"
            android:padding="@dimen/borderPaddingSmall"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/borderPaddingBig"
            android:background="@drawable/shape_round_corner_gray"
            android:hint="@string/inputPassword"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1"
            android:padding="@dimen/borderPaddingSmall" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/borderPaddingBig"
            android:layout_marginLeft="@dimen/borderPaddingBig"
            android:layout_marginRight="@dimen/borderPaddingBig"
            android:layout_marginTop="30dp"
            android:background="@drawable/selector_button_login"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/titleSizeMiddle" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/borderPaddingBig"
        android:layout_marginRight="@dimen/borderPaddingBig"
        android:background="@drawable/shape_round_corner_stroke_translucent_0c"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/grayText"
        android:textSize="@dimen/titleSizeMiddle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />

        <TextView
            android:id="@+id/textView_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/borderPaddingBig"
            android:layout_marginRight="@dimen/borderPaddingBig"
            android:gravity="center"
            android:padding="@dimen/borderPaddingSmall"
            android:text="@string/forgetPassword"
            android:textColor="@color/grayText"
            android:textSize="@dimen/titleSizeSmall" />
    </LinearLayout>


</LinearLayout>
