<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/borderPaddingBig"
        android:paddingRight="@dimen/borderPaddingBig">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textColor="@android:color/black"
            android:textSize="@dimen/titleSizeSmall" />

        <EditText
            android:id="@+id/editText_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:hint="@string/inputPhone"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingLeft="@dimen/borderPaddingBig"
            android:paddingStart="@dimen/borderPaddingBig"
            android:singleLine="true"
            android:textSize="@dimen/titleSizeMiddle" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginLeft="@dimen/borderPaddingBig"
        android:layout_marginStart="@dimen/borderPaddingBig"
        android:background="@color/grayF2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/borderPaddingBig"
        android:paddingRight="@dimen/borderPaddingBig">


        <EditText
            android:id="@+id/editText_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:hint="@string/inputVerifyCode"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/titleSizeMiddle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:paddingLeft="@dimen/borderPadding"
            android:paddingRight="@dimen/borderPadding"
            android:text="@string/clickToGet"
            android:textColor="@color/blue"
            android:textSize="@dimen/titleSizeSmall" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/grayF2" />


</LinearLayout>
